Refactored from new Boolean and new Integer to Boolean.valueOf and Integer.valueOf due to deprecation warnings.   Value of is supported in Java 8 (https://docs.oracle.com/javase/8/docs/api/java/lang/Integer.html)