@@ -323,9 +323,9 @@ public class MultiSlider extends JSlider {
 				accessibleContext.firePropertyChange(
 						AccessibleContext.ACCESSIBLE_VALUE_PROPERTY,
 						(oldModel == null
-						? null : new Integer(oldModel.getValue())),
+						? null : Integer.valueOf(oldModel.getValue())),
 						(newModel == null
-						? null : new Integer(newModel.getValue())));
+						? null : Integer.valueOf(newModel.getValue())));
 			}
 		}
 
@@ -348,7 +348,7 @@ public class MultiSlider extends JSlider {
 		for (int i = 0; i < count; i++) {
 			getModelAt(i).setMinimum(minimum);
 		}
-		firePropertyChange( "minimum", new Integer( oldMin ), new Integer( minimum ) );
+		firePropertyChange("minimum", Integer.valueOf(oldMin), Integer.valueOf(minimum));
 	}
 
 	/***
@@ -367,7 +367,7 @@ public class MultiSlider extends JSlider {
 		for (int i = 0; i < count; i++) {
 			getModelAt(i).setMaximum(maximum);
 		}
-		firePropertyChange( "maximum", new Integer( oldMax ), new Integer( maximum ) );
+		firePropertyChange("maximum", Integer.valueOf(oldMax), Integer.valueOf(maximum));
 	}
 
 	/***
@@ -427,8 +427,8 @@ public class MultiSlider extends JSlider {
 		if (accessibleContext != null) {
 			accessibleContext.firePropertyChange(
 					AccessibleContext.ACCESSIBLE_VALUE_PROPERTY,
-					new Integer(oldValue),
-					new Integer(m.getValue()));
+					Integer.valueOf(oldValue),
+					Integer.valueOf(m.getValue()));
 		}
 	}
 
